--- a/docs/scss/_docs-general.scss
+++ b/docs/scss/_docs-general.scss
@@ -38,3 +38,9 @@ hr{
 hr{
     margin: 36px 0;
 }
+
+.docs-container{
+    margin-left: 0;
+    width: auto;
+    max-width: 1350px;
+}
