--- a/docs/scss/_docs-side-nav.scss
+++ b/docs/scss/_docs-side-nav.scss
@@ -8,6 +8,7 @@ $side-nav-link-active-border: docs-color(action, 1);
     display: table-cell;
     float: none;
     vertical-align: top;
+    width: 17%;
 
     &__headers{
         font-size: 15px;
